# CourseProject_3semester

Application/: CMakeLists.txt  UI_text.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Application/captain_doughter_analyze/: CaptainDoughter.txt
ClassLibrary/: CMakeLists.txt
ClassLibrary/libs/: Dictionary_RU.cpp  Dictionary_RU.hpp  ISpellCheck.hpp  MurmurHash3.cpp  NearestPrime.cpp  NearestPrime.hpp  SC_Bloom_filter.cpp  SC_Bloom_filter.hpp  SC_HT_Chain.cpp  SC_HT_Chain.hpp  SC_HT_DoubleHash.cpp  SC_HT_DoubleHash.hpp  SC_HT_Linear.cpp  SC_HT_Linear.hpp  SC_SimpleFactory.cpp  SC_SimpleFactory.hpp  Service.cpp  Service.hpp  hash_function.cpp  hash_function.hpp
ClassLibrary/tests/: check_dict_tests.cpp  console_version_app.cpp  load_time_tests.cpp
TestCases/: Differentiating_principle.txt  Morphological-graphical_nalogies_principle.txt  Morphological_principle.txt  Phonetical_principle.txt  Special_area.txt  Traditional_principle.txt
